--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Express middleware to capture and inspect HTTP requests/responses with a built-in Inspector UI.",
   "main": "lib/inspector.js",
   "bin": {
-    "express-inspector-ui": "./bin/app.js"
+    "express-inspector": "./bin/app.js"
   },
   "scripts": {
     "start": "node bin/app.js",
-    "demo": "node demo/demo.js"
+    "demo": "node demo/demo.js",
+    "release": "npx np --branch main"
   },
   "keywords": [
     "express",
@@ -24,5 +25,13 @@
     "body": "^5.1.0",
     "express": "^4.21.2",
     "ws": "^8.18.0"
-  }
+  },
+  "files": [
+    "README.md",
+    "LICENSE",
+    "bin/app.js",
+    "lib/inspector.js",
+    "public/index.html",
+    "package-lock.json"
+  ]
 }
